syntax = "proto3";

import "HelloWorldModel.proto";

option java_package = "de.zbw.api.helloworld";
option java_multiple_files = true;

service HelloWorldService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
}